# fhe-impl

fhe-bench/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
fhe-bench/benchmarks/: __main__.py  plots.py  runner.py
fhe-bench/dataset/shanghai_t2dm/: README.md
fhe-bench/explore/: __main__.py  dataset.py
fhe-bench/src/datasets/: shanghai.py
fhe-bench/src/models/: model.py
fhe-bench/src/models/naive_regressor/: __init__.py  cleartext.py  concrete.py  heir.py
fhe-bench/src/models/nn/: cleartext.py  concrete.py  heir.py  perceptron.py  utils.py
fhe-bench/src/models/nn/lattigo_mlp/: .gitignore  bindings.go  go.mod  main.go
fhe-bench/src/models/nn/lattigo_mlp/mlpmodel/: api.go
fhe-bench/src/models/tree/: cleartext.py  concrete.py  utils.py
tfhe-server/: Cargo.toml
tfhe-server/src/: mod.rs
tfhe-server/src/client/: bin.rs  gcm.rs
tfhe-server/src/lib/: mod.rs  protocol.rs  static_deque.rs  trivium_bool.rs  utils.rs
tfhe-server/src/server/: bin.rs  model.rs
